Multiple items field must be a type of array

--- a/app/views/TEMP_fields_uu_id.scala.html
+++ b/app/views/TEMP_fields_uu_id.scala.html
@@ -95,7 +95,7 @@
                                             </td>
                                             <td>
                                                     <select
-                                                        id="propsList" size="6" name="propsList" multiple="multiple" style="width: 15em">
+                                                        id="propsList" size="6" name="propsList[]" multiple="multiple" style="width: 15em">
 
                                                     </select>
                                             </td>
